# api/routes.go
@@ -44,9 +44,9 @@ func SetupRouter(ac *context.AppContext) (r *gin.Engine) {
 		rooms := api.Group("/rooms")
 		{
 			rooms.POST("", roomHandler.Create)
-			rooms.PATCH("/:roomId/share", roomHandler.GenerateShareCode)
-			rooms.PATCH("/:roomId/share-reset", roomHandler.ResetShareCode)
-			rooms.GET("/:roomId/share", roomHandler.GetShareCode)
+			rooms.PATCH("/:roomID/share", roomHandler.GenerateShareCode)
+			rooms.PATCH("/:roomID/share-reset", roomHandler.ResetShareCode)
+			rooms.GET("/:roomID/share", roomHandler.GetShareCode)
 		}
 	}
 
