# docs/swagger.json
@@ -38,7 +38,7 @@
                     {
                         "type": "integer",
                         "description": "Account ID",
-                        "name": "X-Account-Id",
+                        "name": "X-Account-ID",
                         "in": "header",
                         "required": true
                     },
@@ -66,7 +66,7 @@
                         }
                     },
                     "403": {
-                        "description": "Invalid X-Account-Id header format",
+                        "description": "Invalid X-Account-ID header format",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -80,7 +80,7 @@
                 }
             }
         },
-        "/rooms/{roomId}/share": {
+        "/rooms/{roomID}/share": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -103,14 +103,14 @@
                     {
                         "type": "integer",
                         "description": "Account ID",
-                        "name": "X-Account-Id",
+                        "name": "X-Account-ID",
                         "in": "header",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "Room ID",
-                        "name": "roomId",
+                        "name": "roomID",
                         "in": "path",
                         "required": true
                     }
@@ -123,7 +123,7 @@
                         }
                     },
                     "403": {
-                        "description": "Trying to generate a code for someone else's room; Invalid X-Account-Id header format",
+                        "description": "Trying to generate a code for someone else's room; Invalid X-Account-ID header format",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -164,14 +164,14 @@
                     {
                         "type": "integer",
                         "description": "Account ID",
-                        "name": "X-Account-Id",
+                        "name": "X-Account-ID",
                         "in": "header",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "Room ID",
-                        "name": "roomId",
+                        "name": "roomID",
                         "in": "path",
                         "required": true
                     }
@@ -184,7 +184,7 @@
                         }
                     },
                     "403": {
-                        "description": "Trying to generate a code for someone else's room; Invalid X-Account-Id header format",
+                        "description": "Trying to generate a code for someone else's room; Invalid X-Account-ID header format",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -204,7 +204,7 @@
                 }
             }
         },
-        "/rooms/{roomId}/share-reset": {
+        "/rooms/{roomID}/share-reset": {
             "patch": {
                 "consumes": [
                     "application/json"
@@ -227,14 +227,14 @@
                     {
                         "type": "integer",
                         "description": "Account ID",
-                        "name": "X-Account-Id",
+                        "name": "X-Account-ID",
                         "in": "header",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "Room ID",
-                        "name": "roomId",
+                        "name": "roomID",
                         "in": "path",
                         "required": true
                     }
@@ -244,7 +244,7 @@
                         "description": "OK"
                     },
                     "403": {
-                        "description": "Trying to generate a code for someone else's room; Invalid X-Account-Id header format",
+                        "description": "Trying to generate a code for someone else's room; Invalid X-Account-ID header format",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -315,7 +315,7 @@
                     "description": "Name of the created room",
                     "type": "string"
                 },
-                "ownerId": {
+                "ownerID": {
                     "description": "Room owner",
                     "type": "integer"
                 },
