# internal/handlers/room_handler/reset_share_code.go
@@ -17,36 +17,36 @@ import (
 // @Accept 	json
 // @Produce json
 // @Param Produce-Language 	header 	string 	false 	"Language preference" default(en-US)
-// @Param X-Account-Id 		header 	int 	true 	"Account ID"
-// @Param roomId 			path 	int 	true 	"Room ID"
+// @Param X-Account-ID 		header 	int 	true 	"Account ID"
+// @Param roomID 			path 	int 	true 	"Room ID"
 // @Success 200
-// @Failure 403 {object} response.Error "Trying to generate a code for someone else's room; Invalid X-Account-Id header format"
+// @Failure 403 {object} response.Error "Trying to generate a code for someone else's room; Invalid X-Account-ID header format"
 // @Failure 404 {object} response.Error "The room does not exist"
 // @Failure 500 {object} response.Error "Internal server error"
-// @Router /rooms/{roomId}/share-reset [patch]
+// @Router /rooms/{roomID}/share-reset [patch]
 func (h *Handler) ResetShareCode(c *gin.Context) {
 	log.Debug().Msg("Resetting share code")
 
 	lang := c.MustGet("lang").(string)
 	localizer := i18n.NewLocalizer(h.Bundle, lang)
 
-	accountIDHeader := c.GetHeader("X-Account-Id")
+	accountIDHeader := c.GetHeader("X-Account-ID")
 	accountID, err := strconv.Atoi(accountIDHeader)
 	if err != nil {
-		log.Error().Err(err).Str("accountIDHeader", accountIDHeader).Msg("Invalid X-Account-Id format")
+		log.Error().Err(err).Str("accountIDHeader", accountIDHeader).Msg("Invalid X-Account-ID format")
 		c.JSON(http.StatusForbidden, response.Error{
 			Message: localizer.MustLocalize(&i18n.LocalizeConfig{
 				MessageID:    "InvalidHeaderFormat",
-				TemplateData: map[string]interface{}{"Header": "X-Account-Id"}}),
+				TemplateData: map[string]interface{}{"Header": "X-Account-ID"}}),
 			Reason: err.Error(),
 		})
 		return
 	}
 
-	roomIdStr := c.Param("roomId")
-	roomId, err := strconv.Atoi(roomIdStr)
+	roomIDStr := c.Param("roomID")
+	roomID, err := strconv.Atoi(roomIDStr)
 	if err != nil {
-		log.Error().Err(err).Str("roomIdStr", roomIdStr).Msg("Invalid roomId format")
+		log.Error().Err(err).Str("roomIDStr", roomIDStr).Msg("Invalid roomID format")
 		c.JSON(http.StatusBadRequest, response.Error{
 			Message: localizer.MustLocalize(&i18n.LocalizeConfig{
 				MessageID: "InvalidUrlParameterFormat"}),
@@ -54,17 +54,17 @@ func (h *Handler) ResetShareCode(c *gin.Context) {
 		})
 		return
 	}
-	log.Debug().Int("roomId", roomId).Msg("Url parameter read successfully")
+	log.Debug().Int("roomID", roomID).Msg("Url parameter read successfully")
 
 	err = h.TransactionManager.WithTransaction(func(tx *sqlx.Tx) (err error) {
-		err = h.RoomService.ResetShareCode(tx, roomId, accountID)
+		err = h.RoomService.ResetShareCode(tx, roomID, accountID)
 		if err != nil {
 			return err
 		}
 		return nil
 	})
 	if err != nil {
-		log.Error().Err(err).Int("roomId", roomId).Msg("Failed to reset share code")
+		log.Error().Err(err).Int("roomID", roomID).Msg("Failed to reset share code")
 		if _, ok := err.(errors.Forbidden); ok {
 			c.JSON(http.StatusForbidden, response.Error{
 				Message: localizer.MustLocalize(&i18n.LocalizeConfig{
